# vlm-segmentation

./: .gitignore  CLAUDE.md  GEMINI.md  PROJECT_CONTEXT.md  README.md  eval.py  pyproject.toml  train.py
configs/: defaults.yaml
configs/exp_cards/: DRIVE-B0-SwinUNETR.yaml  DRIVE-B1-UNetPP.yaml  DRIVE-B2-nnUNet.yaml  DRIVE-B3-SegFormer-VLM.yaml  DRIVE-B3-SegFormer.yaml  DRIVE-B4-TransUNet-VLM.yaml  DRIVE-B4-TransUNet.yaml  DRIVE-V0-SwinUNETR-VLM.yaml  DRIVE-V1-SwinUNETR-VLM-Topology.yaml  DRIVE-V1-SwinUNETR-VLM.yaml  ISIC2018-B0-SwinUNETR.yaml  ISIC2018-B1-UNetPP.yaml  ISIC2018-B2-nnUNet.yaml  ISIC2018-B3-SegFormer-VLM.yaml  ISIC2018-B3-SegFormer.yaml  ISIC2018-B4-TransUNet-VLM.yaml  ISIC2018-B4-TransUNet.yaml  ISIC2018-V0-SwinUNETR-VLM.yaml  ISIC2018-V1-SwinUNETR-VLM-Topology.yaml  ISIC2018-V1-SwinUNETR-VLM.yaml  MoNuSeg-B0-SwinUNETR.yaml  (+22 more)
docs/: EXPERIMENTS.md  claude-statusbar-guide.md  model_architecture.md  preprocessing.md  project_overview.md
project_context/: backbone_expansion.md  data.md  environment.md  git.md  gpu_policy.md  key_commands.md  metrics.md  model_constraints.md  next_steps.md  objectives.md  paper_kb.md  results.md  runs_contract.md  structure.md  v0_analysis.md  v1_implementation.md
scripts/: backbone_compare.py  git_checkpoint.sh  run_eval.sh  run_reproduce_all.sh  run_train.sh  run_visualize_all.sh  update_results.py  visualize_compare.py
tests/: conftest.py  test_losses.py  test_metrics.py  test_nnunet.py  test_optimizer.py  test_segformer.py  test_smoke_train.py  test_transunet.py  test_vlm_image_prior.py  test_vlm_prior.py
(+42 files in other folders)
